package top.liumuge.builder.improve;

/**
 * @program: DesignPatterns
 * @auther: MuGe
 * @date: 2020/7/10
 * @time: 21:13
 * @description:
 */
//产品
public class House {
	private String baise;
	private String wall;
	private String roofed;

	public String getBaise() {
		return baise;
	}

	public void setBaise(String baise) {
		this.baise = baise;
	}

	public String getWall() {
		return wall;
	}

	public void setWall(String wall) {
		this.wall = wall;
	}

	public String getRoofed() {
		return roofed;
	}

	public void setRoofed(String roofed) {
		this.roofed = roofed;
	}
}
